# Gameoflife

./: CMakeLists.txt  README.md  code.py
include/: application.h  constants.h  counter.h  grid.h  logic_gate.h  renderer.h  simulation.h
src/: application.cpp  counter.cpp  grid.cpp  logic_gate.cpp  main.cpp  renderer.cpp  simulation.cpp
